@@ -30,6 +30,7 @@ t/hash.t
 t/multi.t
 t/ref.t
 t/set.t
+t/storable.t
 t/threads.t
 t/write.t
 tools/benchmark.pl
