@@ -2,6 +2,7 @@ Revision history for Perl extension Hash::MultiValue
 
         - Reapply set method optimisation that was lost in 0.11
         - *really* fix uninitialized warnings in tests (RT#74096)
+        - Add support for Storable serialization
 
 0.11  Sun Feb 12 13:04:54 PST 2012
         - Fix segfaulting splice invocation on perls < 5.8.7
